--- a/tox.ini
+++ b/tox.ini
@@ -1,27 +1,25 @@
 [tox]
-envlist = py35, py36, py37, py38, flake8
+envlist = py37, py38, py39, flake8
 
 [travis]
 python =
+    3.9: py39
     3.8: py38
     3.7: py37
-    3.6: py36
-    3.5: py35
 
 [testenv:flake8]
 basepython = python
 deps = flake8
-commands = flake8 plagdef tests
+commands = 
+    pipenv install --dev
+    pipenv run flake8 --version
+    pipenv run flake8 plagdef tests
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
-deps =
-    -r{toxinidir}/requirements_dev.txt
-; If you want to make tox run the tests with the same versions, create a
-; requirements.txt with the pinned versions and uncomment the following line:
-;     -r{toxinidir}/requirements.txt
+deps = pipenv
 commands =
-    pip install -U pip
-    pytest --basetemp={envtmpdir}
+    pipenv install --dev
+    pipenv run pytest --basetemp={envtmpdir}
 
