--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,7 @@ python:
   - 3.7
 
 # Command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install:
-  pip install pipenv
-  pipenv install --dev
+install: "make"
 
 # Command to run tests, e.g. python setup.py test
 script: pipenv run tox
