--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py37, py38, py39, flake8
+envlist = py37, py38, py39
 skipsdist=True
 
 [travis]
@@ -8,19 +8,9 @@ python =
     3.8: py38
     3.7: py37
 
-[testenv:flake8]
-basepython = python
-deps = flake8
-commands = 
-    pipenv install --dev
-    pipenv run flake8 --version
-    pipenv run flake8 plagdef tests
-
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
 deps = pipenv
 commands =
-    pipenv install --dev
-    pipenv run pytest --basetemp={envtmpdir}
-
+    make coverage
