--- a/Pipfile
+++ b/Pipfile
@@ -4,17 +4,18 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pystemmer = "==2.0.1"
-nltk = "==3.5"
-lxml = "==4.6.2"
+pystemmer = ">=2.0.1"
+nltk = ">=3.5"
+lxml = ">=4.6.2"
+click = ">=7.0"
 
 [dev-packages]
-bump2version = "==0.5.11"
-watchdog = "==0.9.0"
-flake8 = "==3.7.8"
-tox = "==3.14.0"
-coverage = "==5.4"
-click = "==7.0"
-pytest = "==4.6.5"
-pytest-runner = "==5.1"
-tox-travis = "==0.12"
+flake8 = ">=3.7.8"
+tox = ">=3.14.0"
+coverage = ">=5.4"
+pytest = ">=4.6.5"
+tox-travis = ">=0.12"
+twine = ">=3.3.0"
+build = ">=0.3.0"
+setuptools = ">=54.0.0"
+wheel = ">=0.36.2"
