--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,30 @@
-[bumpversion]
-current_version = 0.1.0
-commit = True
-tag = True
+[metadata]
+name = plagdef
+version = 0.1.7
+license = MIT license
+author = Yannik Queisler
+author_email = dev.yannik.queisler@gmail.com
+description = PlagDef supports plagiarism detection for student assignments.
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/devWhyqueue/plagdef
+classifiers =
+    Development Status :: 2 - Pre-Alpha
+    Intended Audience :: Developers
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    License :: OSI Approved :: MIT License
+    Operating System :: OS Independent
 
-[bumpversion:file:plagdef/__init__.py]
-search = __version__ = '{current_version}'
-replace = __version__ = '{new_version}'
+[options]
+packages = find:
+python_requires = >=3.7
+
+[options.packages.find]
+exclude = tests
+
+[options.entry_points]
+console_scripts =
+    plagdef = plagdef.cli:main
