--- a/Pipfile
+++ b/Pipfile
@@ -4,18 +4,17 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pystemmer = ">=2.0.1"
-nltk = ">=3.5"
-lxml = ">=4.6.2"
-click = ">=7.0"
+pystemmer = "~=2.0"
+nltk = "~=3.5"
+lxml = "~=4.6"
+click = "~=7.0"
 
 [dev-packages]
-flake8 = ">=3.7.8"
-tox = ">=3.14.0"
-coverage = ">=5.4"
-pytest = ">=4.6.5"
-tox-travis = ">=0.12"
-twine = ">=3.3.0"
-build = ">=0.3.0"
-setuptools = ">=54.0.0"
-wheel = ">=0.36.2"
+flake8 = "~=3.7"
+tox = "~=3.14"
+coverage = "~=5.4"
+pytest = "~=6.2"
+tox-travis = "~=0.12"
+twine = "~=3.3"
+build = "~=0.3"
+fpdf2 = "~=2.3"
