Add config to data_files

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = plagdef
-version = 0.1.7
+version = 0.1.8
 license = MIT license
 author = Yannik Queisler
 author_email = dev.yannik.queisler@gmail.com
@@ -21,6 +21,9 @@ classifiers =
 [options]
 packages = find:
 python_requires = >=3.7
+
+[options.data_files]
+config = config/alg.ini
 
 [options.packages.find]
 exclude = tests
