--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = plagdef
-version = 0.1.8
+version = 0.1.11
 license = MIT license
 author = Yannik Queisler
 author_email = dev.yannik.queisler@gmail.com
@@ -22,8 +22,8 @@ classifiers =
 packages = find:
 python_requires = >=3.7
 
-[options.data_files]
-config = config/alg.ini
+[options.package_data]
+plagdef = config/alg.ini
 
 [options.packages.find]
 exclude = tests
