--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,6 @@ python =
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
-deps = make
+whitelist_externals = make
 commands =
     make coverage
