Exclude test dir

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=devWhyqueue_plagdef
 sonar.organization=devwhyqueue-github
 sonar.python.coverage.reportPaths=coverage.xml
+sonar.tests=plagdef/tests
