--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = plagdef
-version = 0.1.20
+version = 0.1.30
 license = MIT license
 author = Yannik Queisler
 author_email = dev.yannik.queisler@gmail.com
@@ -23,7 +23,7 @@ python_requires = >=3.7
 packages = find:
 install_requires =
     pystemmer ~= 2.0
-    ntlk ~= 3.5
+    nltk ~= 3.5
     lxml ~= 4.6
     click ~= 7.0
 
