--- a/plagdef/config/alg.ini
+++ b/plagdef/config/alg.ini
@@ -21,16 +21,11 @@ src_size = 1
 ; Minimum amount of sentences in a plagiarism case in the side of suspicious document.
 susp_size = 1
 ; Minimum amount of words allowed in a sentences. If less, the sentence is annexed to the next sentence.
-min_sentlen = 3
+min_sent_len = 3
 ; Minimum amount of characters allowed in each side of a plagiarism case.
 min_plaglen = 150
-; 0: Annex small sentences to the next, Other: Remove small sentences.
-rssent = 0
-; Define if computing tf_idf or just tf. 0: Use tf   1: Compute tf-idf
-tf_idf_p = 1
-; Define the treatment of stopwords. 0: Do not remove stopwords   1: Remove 50 more common stopwords
-; Other:Remove all stopwords
-rem_sw = 0
+; Remove stop words (yes/no)
+rem_stop_words = True
 ; Define if using the verbatim detection method. 0: Do not use it   Other: Use it
 verbatim = 1
 ; Define if using the summary detection method. 0: Do not use it   Other: Use it
