--- a/setup.cfg
+++ b/setup.cfg
@@ -22,17 +22,19 @@ classifiers =
 python_requires = >=3.7
 packages = find:
 install_requires =
-    pystemmer ~= 2.0
     nltk ~= 3.5
     lxml ~= 4.6
     click ~= 7.0
+    spacy ~= 3.0
 
 
 [options.package_data]
 plagdef = config/alg.ini
 
 [options.packages.find]
-exclude = tests
+where = plagdef
+exclude =
+    tests
 
 [options.entry_points]
 console_scripts =
