--- a/Pipfile
+++ b/Pipfile
@@ -4,21 +4,22 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+click = "~=7.0"
+lxml = "~=4.6"
 more-itertools = "~=8.7"
 nltk = "~=3.5"
-lxml = "~=4.6"
-click = "~=7.0"
-spacy = "~=3.0"
 numpy = "~=1.20"
 pyside6 = "~=6.0"
+somajo = "~=2.1"
+spacy = "~=3.0"
 
 [dev-packages]
-flake8 = "~=3.7"
-tox = "~=3.14"
+build = "~=0.3"
 coverage = "~=5.4"
+flake8 = "~=3.7"
+fpdf2 = "~=2.3"
 pytest = "~=6.2"
+pystemmer = "~=2.0"
+tox = "~=3.14"
 tox-travis = "~=0.12"
 twine = "~=3.3"
-build = "~=0.3"
-fpdf2 = "~=2.3"
-pystemmer = "~=2.0"
