--- a/setup.cfg
+++ b/setup.cfg
@@ -22,9 +22,13 @@ classifiers =
 python_requires = >=3.7
 packages = find:
 install_requires =
-    nltk ~= 3.5
-    lxml ~= 4.6
     click ~= 7.0
+    lxml ~= 4.6
+    more-itertools ~= 8.7
+    nltk ~= 3.5
+    numpy ~= 1.20
+    pyside6 ~= 6.0
+    somajo ~= 2.1
     spacy ~= 3.0
 
 
@@ -38,4 +42,6 @@ exclude =
 
 [options.entry_points]
 console_scripts =
-    plagdef = plagdef.cli:main
+    plagdef = plagdef.app:cli
+    plagdef-gui = plagdef.app:gui
+
