--- a/setup.cfg
+++ b/setup.cfg
@@ -33,12 +33,13 @@ install_requires =
 
 
 [options.package_data]
-plagdef = config/alg.ini
+plagdef =
+    config/alg.ini
+    gui/ui/*
+    gui/res/*
 
 [options.packages.find]
-where = plagdef
-exclude =
-    tests
+exclude = *tests*
 
 [options.entry_points]
 console_scripts =
