--- a/Pipfile
+++ b/Pipfile
@@ -21,5 +21,5 @@ fpdf2 = "~=2.3"
 pytest = "~=6.2"
 pystemmer = "~=2.0"
 tox = "~=3.14"
-tox-travis = "~=0.12"
+tox-gh-actions = "~=2.4"
 twine = "~=3.3"
