--- a/setup.cfg
+++ b/setup.cfg
@@ -46,3 +46,16 @@ console_scripts =
     plagdef = plagdef.app:cli
     plagdef-gui = plagdef.app:gui
 
+[tox:tox]
+envlist = py37, py38, py39
+
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38
+    3.9: py39
+
+[testenv]
+whitelist_externals = make
+commands =
+    make test
