--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,4 +23,4 @@ jobs:
         -   name: Install dependencies
             run: make
         -   name: Run tests
-            run: make test-all
+            run: make test-all-ci
