--- a/setup.cfg
+++ b/setup.cfg
@@ -55,7 +55,12 @@ python =
     3.8: py38
     3.9: py39
 
-[testenv:py37,py38]
+[testenv:py37]
+whitelist_externals = make
+commands =
+    make test-ci
+
+[testenv:py38]
 whitelist_externals = make
 commands =
     make test-ci
