--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,20 +7,38 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+    build:
+        runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                python: [ 3.7, 3.8, 3.9 ]
+                steps:
+                    -   uses: actions/checkout@v2
+                    -   name: Setup Python
+                        uses: actions/setup-python@v2
+                        with:
+                            python-version: ${{ matrix.python }}
+                    -   name: Install dependencies
+                        run: make
+                    -   name: Run tests
+                        run: make test-all-ci
+                    -   uses: actions/upload-artifact@master
+                        if: ${{ matrix.python == 3.9 }}
+                        with:
+                            name: coverage
+                            path: coverage.xml
 
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python: [3.7, 3.8, 3.9]
-
-    steps:
-        -   uses: actions/checkout@v2
-        -   name: Setup Python
-            uses: actions/setup-python@v2
-            with:
-                python-version: ${{ matrix.python }}
-        -   name: Install dependencies
-            run: make
-        -   name: Run tests
-            run: make test-all-ci
+    sonarcloud:
+        runs-on: ubuntu-latest
+        steps:
+            -   uses: actions/download-artifact@master
+                with:
+                    name: coverage
+                    path: coverage.xml
+            -   uses: actions/checkout@v2
+                with:
+                    fetch-depth: 0
+            -   name: SonarCloud Scan
+                uses: sonarsource/sonarcloud-github-action@master
+                env:
+                    SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
