--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,7 @@ jobs:
                     path: coverage.xml
 
     sonarcloud:
+        needs: build
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/download-artifact@master
