--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,10 +42,7 @@ jobs:
                 uses: actions/download-artifact@master
                 with:
                     name: coverage
-                    path: ~/coverage.xml
-            -   name: Display structure of downloaded files
-                run: ls -R
-                working-directory: ~
+                    path: /home/runner/work/plagdef/plagdef/coverage.xml
             -   name: SonarCloud Scan
                 uses: sonarsource/sonarcloud-github-action@master
                 env:
