--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ classifiers =
 python_requires = >=3.7
 packages = find:
 install_requires =
+    chardet ~= 4.0
     click ~= 7.0
     lxml ~= 4.6
     more-itertools ~= 8.7
