--- a/setup.cfg
+++ b/setup.cfg
@@ -29,8 +29,7 @@ install_requires =
     nltk ~= 3.5
     numpy ~= 1.20
     pyside6 ~= 6.0
-    somajo ~= 2.1
-    spacy ~= 3.0
+    stanza ~= 1.2
 
 
 [options.package_data]
