--- a/plagdef/config/alg.ini
+++ b/plagdef/config/alg.ini
@@ -1,31 +1,25 @@
 [default]
-; Threshold corresponding to the first similarity measure (cosine).
-th1 = 0.3
-; Threshold corresponding to the second similarity measure (dice).
-th2 = 0.33
-; Threshold corresponding to the third similarity measure (cosine).
-th3 = 0.34
-; Maximum gap between sentences in the source document taken as adjacent.
-src_gap = 4
-; Minimum value that src_gap can take after several iterations.
-src_gap_least = 0
-; Maximum gap between sentences in the suspicious document taken as adjacent.
-susp_gap = 4
-; Minimum value that susp_gap can take after several iterations.
-susp_gap_least = 0
+; Remove stop words (yes/no)
+rem_stop_words = False
+; Minimum amount of words allowed in a sentences. If less, the sentence is annexed to the next sentence.
+min_sent_len = 3
+; Minimum cosine similarity between seeds.
+min_cos_sim = 0.3
+; Minimum dice coefficient between seeds.
+min_dice_sim = 0.33
+; Minimum cosine similarity between clusters.
+min_cluster_cos_sim = 0.34
+; Maximum gap between sentences taken as adjacent.
+adjacent_sents_gap = 4
+; Minimum value that adjacent_sents_gap can take after several iterations.
+min_adjacent_sents_gap = 0
 ; Minimum length in characters of common substring (using words) between both documents
 ; to consider to be a verbatim obfuscation case.
 verbatim_minlen = 256
-; Minimum amount of sentences in a plagiarism case in the side of source document.
-src_size = 1
-; Minimum amount of sentences in a plagiarism case in the side of suspicious document.
-susp_size = 1
-; Minimum amount of words allowed in a sentences. If less, the sentence is annexed to the next sentence.
-min_sent_len = 3
+; Minimum amount of sentences in a plagiarism case.
+min_sent_number = 1
 ; Minimum amount of characters allowed in each side of a plagiarism case.
 min_plaglen = 150
-; Remove stop words (yes/no)
-rem_stop_words = False
 ; Define if using the verbatim detection method. 0: Do not use it   Other: Use it
 verbatim = 1
 ; Define if using the summary detection method. 0: Do not use it   Other: Use it
