--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-chardet = '~=4.0'
+charset-normalizer = '~=1.3'
 click = "~=7.0"
 lxml = "~=4.6"
 more-itertools = "~=8.7"
@@ -17,7 +17,6 @@ stanza = "~=1.2"
 build = "~=0.3"
 coverage = "~=5.4"
 flake8 = "~=3.7"
-fpdf2 = "~=2.3"
 pytest = "~=6.2"
 pystemmer = "~=2.0"
 tox = "~=3.14"
