--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ more-itertools = "~=8.7"
 nltk = "~=3.5"
 numpy = "~=1.20"
 pyside6 = "~=6.0"
+sortedcontainers = "~=2.3"
 stanza = "~=1.2"
 
 [dev-packages]
