--- a/plagdef/config/alg.ini
+++ b/plagdef/config/alg.ini
@@ -18,8 +18,8 @@ min_adjacent_sents_gap = 0
 verbatim_minlen = 256
 ; Minimum amount of sentences in a plagiarism case.
 min_sent_number = 1
-; Minimum amount of characters allowed in each side of a plagiarism case.
-min_plaglen = 150
+; Minimum amount of a cluster's characters in each document
+min_cluster_char_len = 150
 ; Define if using the verbatim detection method. 0: Do not use it   Other: Use it
 verbatim = 1
 ; Define if using the summary detection method. 0: Do not use it   Other: Use it
