--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ install_requires =
     click ~= 7.0
     lxml ~= 4.6
     more-itertools ~= 8.7
+    networkx ~= 2.5
     nltk ~= 3.5
     numpy ~= 1.20
     pyside6 ~= 6.0
