--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ charset-normalizer = '~=1.3'
 click = "~=7.0"
 lxml = "~=4.6"
 more-itertools = "~=8.7"
+networkx = "~=2.5"
 nltk = "~=3.5"
 numpy = "~=1.20"
 pyside6 = "~=6.0"
