Replace legacy algorithm

--- a/plagdef/config/alg.ini
+++ b/plagdef/config/alg.ini
@@ -11,20 +11,14 @@ min_dice_sim = 0.33
 min_cluster_cos_sim = 0.34
 ; Maximum gap between sentences taken as adjacent.
 adjacent_sents_gap = 4
+; Maximum gap between sentences taken as adjacent for summary plagiarism.
+adjacent_sents_gap_summary = 24
 ; Minimum value that adjacent_sents_gap can take after several iterations.
 min_adjacent_sents_gap = 0
-; Minimum length in characters of common substring (using words) between both documents
-; to consider to be a verbatim obfuscation case.
-verbatim_minlen = 256
 ; Minimum amount of sentences in a plagiarism case.
 min_sent_number = 1
 ; Minimum amount of a cluster's characters in each document
 min_cluster_char_len = 150
-; Define if using the verbatim detection method. 0: Do not use it   Other: Use it
-verbatim = 1
-; Define if using the summary detection method. 0: Do not use it   Other: Use it
-summary = 1
-; src_gap for the summary detection method
-src_gap_summary = 24
-; susp_gap for the summary detection method
-susp_gap_summary = 24
+; Minimum length in characters of common substring (using words) between both documents
+; to consider to be a verbatim obfuscation case.
+min_verbatim_match_char_len = 256
