Add pdf support

--- a/Pipfile
+++ b/Pipfile
@@ -9,8 +9,8 @@ click = "~=7.0"
 lxml = "~=4.6"
 more-itertools = "~=8.7"
 networkx = "~=2.5"
-nltk = "~=3.5"
 numpy = "~=1.20"
+pdfplumber = "~=0.5"
 pyside6 = "~=6.0"
 sortedcontainers = "~=2.3"
 stanza = "~=1.2"
@@ -19,6 +19,7 @@ stanza = "~=1.2"
 build = "~=0.3"
 coverage = "~=5.4"
 flake8 = "~=3.7"
+fpdf2 = "~=2.3"
 pytest = "~=6.2"
 pystemmer = "~=2.0"
 tox = "~=3.14"
