--- a/setup.cfg
+++ b/setup.cfg
@@ -22,13 +22,13 @@ classifiers =
 python_requires = >=3.7
 packages = find:
 install_requires =
-    chardet ~= 4.0
+    charset-normalizer ~= 1.3
     click ~= 7.0
     lxml ~= 4.6
     more-itertools ~= 8.7
     networkx ~= 2.5
-    nltk ~= 3.5
     numpy ~= 1.20
+    pdfplumber = ~= 0.5
     pyside6 ~= 6.0
     sortedcontainers ~= 2.3
     stanza ~= 1.2
