--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ install_requires =
     more-itertools ~= 8.7
     networkx ~= 2.5
     numpy ~= 1.20
-    pdfplumber = ~= 0.5
+    pdfplumber ~= 0.5
     pyside6 ~= 6.0
     sortedcontainers ~= 2.3
     stanza ~= 1.2
