Add exclude common text feature

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=devWhyqueue_plagdef
 sonar.organization=devwhyqueue-github
 sonar.python.coverage.reportPaths=coverage.xml
-sonar.coverage.exclusions=**/tests/**,**/gui/model.py
+sonar.coverage.exclusions=**/tests/**
+sonar.exclusions=**/resources.py
