--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,6 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-charset-normalizer = '~=1.3'
 click = "~=7.0"
 lxml = "~=4.6"
 more-itertools = "~=8.7"
@@ -12,6 +11,7 @@ networkx = "~=2.5"
 numpy = "~=1.20"
 pdfplumber = "~=0.5"
 pyside6 = "~=6.0"
+python-magic = "~=0.4"
 sortedcontainers = "~=2.3"
 stanza = "~=1.2"
 
