--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,6 @@ classifiers =
 python_requires = >=3.7
 packages = find:
 install_requires =
-    charset-normalizer ~= 1.3
     click ~= 7.0
     lxml ~= 4.6
     more-itertools ~= 8.7
@@ -30,6 +29,7 @@ install_requires =
     numpy ~= 1.20
     pdfplumber ~= 0.5
     pyside6 ~= 6.0
+    python-magic ~= 0.4
     sortedcontainers ~= 2.3
     stanza ~= 1.2
 
