--- a/plagdef/config/alg.ini
+++ b/plagdef/config/alg.ini
@@ -7,7 +7,7 @@ min_sent_len = 3
 min_cos_sim = 0.3
 ; Minimum dice coefficient between seeds.
 min_dice_sim = 0.33
-; Minimum cosine similarity between clusters.
+; Minimum cosine similarity of a cluster's text fragments.
 min_cluster_cos_sim = 0.34
 ; Maximum gap between sentences taken as adjacent.
 adjacent_sents_gap = 4
