Improve common text exclusion

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = plagdef
-version = 0.3.5
+version = 0.3.6
 license = MIT license
 author = Yannik Queisler
 author_email = dev.yannik.queisler@gmail.com
@@ -36,6 +36,7 @@ install_requires =
 [options.package_data]
 plagdef =
     config/alg.ini
+    config/logging.ini
     gui/ui/*
     gui/res/*
 
