Add progress bar

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ pyside6 = "~=6.0"
 python-magic = "~=0.4"
 sortedcontainers = "~=2.3"
 stanza = "~=1.2"
+tqdm = "~=4.60"
 
 [dev-packages]
 build = "~=0.3"
