--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ install_requires =
     python-magic ~= 0.4
     sortedcontainers ~= 2.3
     stanza ~= 1.2
+    tqdm = ~= 4.60
 
 
 [options.package_data]
