--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = plagdef
-version = 0.3.6
+version = 0.3.7
 license = MIT license
 author = Yannik Queisler
 author_email = dev.yannik.queisler@gmail.com
@@ -31,7 +31,7 @@ install_requires =
     python-magic ~= 0.4
     sortedcontainers ~= 2.3
     stanza ~= 1.2
-    tqdm = ~= 4.60
+    tqdm ~= 4.60
 
 
 [options.package_data]
