--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = plagdef
-version = 0.4.6
+version = 0.4.7
 license = MIT license
 author = Yannik Queisler
 author_email = dev.yannik.queisler@gmail.com
@@ -22,7 +22,7 @@ classifiers =
 python_requires = >=3.7
 packages = find:
 install_requires =
-    click ~= 7.0
+    click == 8.0.0rc1
     lxml ~= 4.6
     networkx ~= 2.5
     numpy ~= 1.20
