--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ python_requires = >=3.7
 packages = find:
 install_requires =
     click == 8.0.0rc1
-    lxml ~= 4.6
+    jsonpickle ~= 2.0
     networkx ~= 2.5
     numpy ~= 1.20
     pdfplumber ~= 0.5
