--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ click = "==8.0.0rc1"
 jsonpickle = "~=2.0"
 networkx = "~=2.5"
 numpy = "~=1.20"
+ocrmypdf = "~=12.0"
 pdfplumber = "~=0.5"
 pyside6 = "~=6.0"
 python-magic = "~=0.4"
