--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = plagdef
-version = 0.5.6
+version = 0.5.7
 license = MIT license
 author = Yannik Queisler
 author_email = dev.yannik.queisler@gmail.com
@@ -26,6 +26,7 @@ install_requires =
     jsonpickle ~= 2.0
     networkx ~= 2.5
     numpy ~= 1.20
+    ocrmypdf = ~= 12.0
     pdfplumber ~= 0.5
     pyside6 ~= 6.0
     python-magic ~= 0.4
