--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ install_requires =
     jsonpickle ~= 2.0
     networkx ~= 2.5
     numpy ~= 1.20
-    ocrmypdf = ~= 12.0
+    ocrmypdf ~= 12.0
     pdfplumber ~= 0.5
     pyside6 ~= 6.0
     python-magic ~= 0.4
