Add OCR option and dependency-injector

--- a/plagdef/config/app.ini
+++ b/plagdef/config/app.ini
@@ -1,4 +1,8 @@
 [default]
+; The document's language
+lang = ger
+; Use OCR for PDFs with poor text layers
+ocr = True
 ; Remove stop words (yes/no)
 rem_stop_words = False
 ; Minimum amount of words allowed in a sentences. If less, the sentence is annexed to the next sentence.
