--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = plagdef
-version = 0.5.17
+version = 0.6
 license = MIT license
 author = Yannik Queisler
 author_email = dev.yannik.queisler@gmail.com
-description = PlagDef supports plagiarism detection for student assignments.
+description = A tool which makes life hard for students who try to make theirs simple.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/devWhyqueue/plagdef
@@ -23,6 +23,7 @@ python_requires = >=3.7
 packages = find:
 install_requires =
     click == 8.0.0rc1
+    dependency-injector ~= 4.32
     jsonpickle ~= 2.0
     networkx ~= 2.5
     numpy ~= 1.20
@@ -37,7 +38,7 @@ install_requires =
 
 [options.package_data]
 plagdef =
-    config/alg.ini
+    config/app.ini
     config/logging.ini
     gui/ui/*
     gui/res/*
