--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-click = "==8.0.0rc1"
+click = "~=8.0"
 dependency-injector = "~=4.32"
 jsonpickle = "~=2.0"
 networkx = "~=2.5"
