Close #31: Add reanalyze feature

--- a/plagdef/config/app.ini
+++ b/plagdef/config/app.ini
@@ -3,6 +3,8 @@
 lang = 'ger'
 ; Use OCR for PDFs with poor text layers
 ocr = True
+; Use serialization for improved performance
+ser = True
 ; Remove stop words (yes/no)
 rem_stop_words = False
 ; Minimum amount of words allowed in a sentences. If less, the sentence is annexed to the next sentence.
