Improve config management

--- a/plagdef/config/app.ini
+++ b/plagdef/config/app.ini
@@ -1,6 +1,6 @@
 [default]
 ; The document's language
-lang = ger
+lang = 'ger'
 ; Use OCR for PDFs with poor text layers
 ocr = True
 ; Remove stop words (yes/no)
