--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = plagdef
-version = 1.1.1
+version = 1.2.1
 license = MIT license
 author = Yannik Queisler
 author_email = dev.yannik.queisler@gmail.com
@@ -9,20 +9,20 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/devWhyqueue/plagdef
 classifiers =
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 4 - Beta
     Intended Audience :: Developers
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
-    License :: OSI Approved :: MIT License
+    License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE V3 (GPLV3)
     Operating System :: OS Independent
 
 [options]
 python_requires = >=3.7
 packages = find:
 install_requires =
-    click == 8.0.0rc1
+    click ~= 8.0
     jsonpickle ~= 2.0
     networkx ~= 2.5
     numpy ~= 1.20
