--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = plagdef
-version = 1.2.1
+version = 1.2.2
 license = MIT license
 author = Yannik Queisler
 author_email = dev.yannik.queisler@gmail.com
@@ -15,7 +15,7 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
-    License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE V3 (GPLV3)
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Operating System :: OS Independent
 
 [options]
