--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,4 +2,4 @@ sonar.projectKey=devWhyqueue_plagdef
 sonar.organization=devwhyqueue-github
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.coverage.exclusions=**/tests/**
-sonar.exclusions=**/resources.py
+sonar.exclusions=**/resources.py,**/tests/**
