--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,13 +1,13 @@
-name: test
+name: cd
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    push:
+        branches: [ main ]
+    pull_request:
+        branches: [ main ]
 
 jobs:
-    build:
+    test:
         runs-on: ubuntu-latest
         strategy:
             matrix:
@@ -30,8 +30,28 @@ jobs:
                     name: coverage
                     path: coverage.xml
 
+    publish:
+        needs: test
+        runs-on: ubuntu-latest
+        steps:
+            -   name: Checkout repo
+                uses: actions/checkout@v2
+            -   name: Setup Python
+                uses: actions/setup-python@v2
+                with:
+                    python-version: 3.9
+            -   name: Install pypa/build
+                run: python -m pip install build
+            -   name: Build a binary wheel and a source tarball
+                run: python -m build
+            -   name: Publish to PyPI
+                if: startsWith(github.ref, 'refs/tags')
+                uses: pypa/gh-action-pypi-publish@master
+                with:
+                    password: ${{ secrets.PYPI_API_TOKEN }}
+
     sonarcloud:
-        needs: build
+        needs: test
         runs-on: ubuntu-latest
         steps:
             -   name: Checkout repo
