--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,64 @@
-[build-system]
-requires = [
-    "setuptools >= 40.9.0",
-    "wheel",
+[tool.poetry]
+name = "plagdef"
+version = "1.2.3"
+description = "A tool which makes life hard for students who try to make theirs simple."
+authors = ["Yannik Queisler"]
+license = "GPL-3.0-or-later"
+readme = "README.md"
+homepage = "https://github.com/devWhyqueue/plagdef"
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "Operating System :: OS Independent"
 ]
-build-backend = "setuptools.build_meta"
+exclude = ["*/tests"]
+
+[tool.poetry.dependencies]
+python = ">=3.8,<3.10"
+click = "~=8.0"
+jsonpickle = "~=2.0"
+networkx = "~=2.5"
+numpy = "~=1.20"
+pdfplumber = "~=0.5"
+ocrmypdf = "~=12.0"
+pyside6 = "~=6.0"
+python-magic = "~=0.4"
+sortedcontainers = "~=2.3"
+stanza = "~=1.2"
+tqdm = "~=4.60"
+
+[tool.poetry.dev-dependencies]
+coverage = "~=5.4"
+flake8 = "~=3.7"
+fpdf2 = "~=2.3"
+pytest = "~=6.2"
+tox = "~=3.14"
+tox-gh-actions = "~=2.4"
+
+[tool.poetry.scripts]
+plagdef = "plagdef.app:cli"
+plagdef-gui = "plagdef.app:gui"
+
+[tool.tox]
+legacy_tox_ini = """
+[tox]
+isolated_build = True
+envlist = py38,py39
+
+[gh-actions]
+python =
+    3.8: py38
+    3.9: py39
+
+[testenv:py38]
+whitelist_externals = make
+commands = make test-ci
+
+[testenv:py39]
+whitelist_externals = make
+commands = make coverage-ci
+"""
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
