Add external source download

--- a/plagdef/config/app.ini
+++ b/plagdef/config/app.ini
@@ -1,6 +1,8 @@
 [default]
 ; The document's language
 lang = 'ger'
+; Download path for referenced sources
+download_path = ''
 ; Use OCR for PDFs with poor text layers
 ocr = True
 ; Use serialization for improved performance
