Reduce log messages

--- a/plagdef/config/app.ini
+++ b/plagdef/config/app.ini
@@ -4,7 +4,7 @@ lang = 'ger'
 ; Download path for referenced sources
 download_path = ''
 ; Use OCR for PDFs with poor text layers
-ocr = True
+ocr = False
 ; Use serialization for improved performance
 ser = True
 ; Remove stop words (yes/no)
