--- a/plagdef/config/logging.ini
+++ b/plagdef/config/logging.ini
@@ -8,7 +8,7 @@ keys = consoleHandler
 keys = sampleFormatter
 
 [logger_root]
-level = WARNING
+level = ERROR
 handlers = consoleHandler
 
 [logger_plagdef]
