--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "plagdef"
-version = "1.3.8"
+version = "1.3.9"
 description = "A tool which makes life hard for students who try to make theirs simple."
 authors = ["Yannik Queisler"]
 license = "GPL-3.0-or-later"
@@ -15,28 +15,28 @@ exclude = ["*/tests"]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.10"
-beautifulsoup4 = "~=4.9"
-click = "~=8.0"
-jsonpickle = "~=2.0"
-networkx = "~=2.5"
-numpy = "~=1.20"
-pdfplumber = ">=0.5.28"
-ocrmypdf = "~=12.0"
+beautifulsoup4 = "^4.10"
+click = "^8.0"
+jsonpickle = "^2.0"
+networkx = "^2.6"
+numpy = "^1.21"
+pdfplumber = "^0.5.28"
+ocrmypdf = "^12.6"
 pyside6 = "~=6"
-python-magic = "~=0.4"
-sortedcontainers = "~=2.3"
-stanza = "~=1.2"
-tqdm = "~=4.60"
-urlextract = "~=1.3"
-Werkzeug = "~=2.0"
+python-magic = "^0.4"
+sortedcontainers = "^2.3"
+stanza = "^1.2"
+tqdm = "^4.60"
+urlextract = "^1.3"
+Werkzeug = "^2.0"
 
 [tool.poetry.dev-dependencies]
-coverage = "~=5.4"
-flake8 = "~=3.7"
-fpdf2 = "~=2.3"
-pytest = "~=6.2"
-tox = "~=3.14"
-tox-gh-actions = "~=2.4"
+coverage = "^6.0"
+flake8 = "^3.7"
+fpdf2 = "^2.3"
+pytest = "^6.2"
+tox = "^3.14"
+tox-gh-actions = "^2.4"
 
 [tool.poetry.scripts]
 plagdef = "plagdef.app:cli"
