Exclude small external sources
Took 35 minutes

--- a/plagdef/config/app.ini
+++ b/plagdef/config/app.ini
@@ -1,8 +1,6 @@
 [default]
 ; The document's language
 lang = 'ger'
-; Download path for referenced sources
-download_path = ''
 ; Use OCR for PDFs with poor text layers
 ocr = False
 ; Use serialization for improved performance
@@ -30,3 +28,7 @@ min_cluster_char_len = 150
 ; Minimum length in characters of common substring (using words) between both documents
 ; to consider to be a verbatim obfuscation case.
 min_verbatim_match_char_len = 256
+; Download path for referenced sources
+download_path = ''
+; Minimum size for external sources (chars/bytes)
+min_ext_size = 2000
