Use content based equality for files/documents
Took 3 hours 30 minutes

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=devWhyqueue_plagdef
 sonar.organization=devwhyqueue-github
+sonar.python.version=3.8, 3.9
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.coverage.exclusions=**/tests/**
 sonar.exclusions=**/resources.py,**/tests/**
