--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,26 +17,26 @@ exclude = ["*/tests"]
 python = ">=3.8,<3.10"
 beautifulsoup4 = "^4.10"
 click = "^8.0"
-jsonpickle = "^2.0"
-networkx = "^2.6"
-numpy = "^1.21"
-pdfplumber = "^0.5.28"
-ocrmypdf = "^12.6"
-pyside6 = "~=6"
+jsonpickle = "^2.1"
+networkx = "^2.7"
+numpy = "^1.22"
+pdfplumber = "^0.6"
+ocrmypdf = "^13.4"
+pyside6 = "^=6.2"
 python-magic = "^0.4"
-sortedcontainers = "^2.3"
-stanza = "^1.2"
-tqdm = "^4.60"
-urlextract = "^1.3"
+sortedcontainers = "^2.4"
+stanza = "^1.3"
+tqdm = "^4.63"
+urlextract = "^1.5"
 Werkzeug = "^2.0"
 
 [tool.poetry.dev-dependencies]
-coverage = "^6.0"
-flake8 = "^3.7"
-fpdf2 = "^2.3"
-pytest = "^6.2"
-tox = "^3.14"
-tox-gh-actions = "^2.4"
+coverage = "^6.3"
+flake8 = "^4.0"
+fpdf2 = "^2.5"
+pytest = "^7.0"
+tox = "^3.24"
+tox-gh-actions = "^2.9"
 
 [tool.poetry.scripts]
 plagdef = "plagdef.app:cli"
