--- a/plagdef/config/app.ini
+++ b/plagdef/config/app.ini
@@ -1,6 +1,6 @@
 [default]
 ; The document's language
-lang = 'ger'
+lang = 'de'
 ; Use OCR for PDFs with poor text layers
 ocr = False
 ; Use serialization for improved performance
