--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "plagdef"
-version = "1.3.12"
+version = "1.4"
 description = "A tool which makes life hard for students who try to make theirs simple."
 authors = ["Yannik Queisler"]
 license = "GPL-3.0-or-later"
@@ -17,7 +17,9 @@ exclude = ["*/tests"]
 python = ">=3.8,<3.10"
 beautifulsoup4 = "^4.10"
 click = "^8.0"
+deep-translator = "^1.7"
 jsonpickle = "^2.1"
+langdetect = "^1.0"
 networkx = "^2.7"
 numpy = "^1.22"
 pdfplumber = "^0.6"
