--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,7 +7,7 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                python: [ 3.8, 3.9 ]
+                python: [ 3.9 ]
         steps:
             -   name: Checkout repo
                 uses: actions/checkout@v2
@@ -38,8 +38,9 @@ jobs:
                 with:
                     python-version: 3.9
             -   name: Publish to PyPI
-                uses: JRubics/poetry-publish@v1.6
+                uses: JRubics/poetry-publish@v1.10
                 with:
+                    python_version: 3.9
                     pypi_token: ${{ secrets.PYPI_API_TOKEN }}
 
     sonarcloud:
