--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "plagdef"
-version = "1.4.6"
+version = "1.4.7"
 description = "A tool which makes life hard for students who try to make theirs simple."
 authors = ["Yannik Queisler"]
 license = "GPL-3.0-or-later"
@@ -14,7 +14,7 @@ classifiers = [
 exclude = ["*/tests"]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.10"
+python = ">=3.9,<3.10"
 beautifulsoup4 = "^4.10"
 click = "^8.0"
 deep-translator = "^1.7"
@@ -48,16 +48,11 @@ plagdef-gui = "plagdef.app:gui"
 legacy_tox_ini = """
 [tox]
 isolated_build = True
-envlist = py38,py39
+envlist = py39
 
 [gh-actions]
 python =
-    3.8: py38
     3.9: py39
-
-[testenv:py38]
-whitelist_externals = make
-commands = make test-ci
 
 [testenv:py39]
 whitelist_externals = make
