--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,12 +7,12 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                python: [ 3.9 ]
+                python: [ '3.9', '3.10' ]
         steps:
             -   name: Checkout repo
-                uses: actions/checkout@v2
+                uses: actions/checkout@v3
             -   name: Setup Python
-                uses: actions/setup-python@v2
+                uses: actions/setup-python@v3
                 with:
                     python-version: ${{ matrix.python }}
             -   name: Install dependencies
@@ -32,9 +32,9 @@ jobs:
         if: startsWith(github.ref, 'refs/tags')
         steps:
             -   name: Checkout repo
-                uses: actions/checkout@v2
+                uses: actions/checkout@v3
             -   name: Setup Python
-                uses: actions/setup-python@v2
+                uses: actions/setup-python@v3
                 with:
                     python-version: 3.9
             -   name: Publish to PyPI
@@ -49,7 +49,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         steps:
             -   name: Checkout repo
-                uses: actions/checkout@v2
+                uses: actions/checkout@v3
                 with:
                     fetch-depth: 0
             -   name: Get coverage
