Update dep and SQ fixes
Took 45 minutes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "plagdef"
-version = "1.4.12"
+version = "1.4.13"
 description = "A tool which makes life hard for students who try to make theirs simple."
 authors = ["Yannik Queisler"]
 license = "GPL-3.0-or-later"
@@ -15,33 +15,33 @@ exclude = ["*/tests"]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.11"
-beautifulsoup4 = "^4.10"
+beautifulsoup4 = "^4.11"
 click = "^8.1"
-deep-translator = "^1.7"
-fpdf2 = "^2.5"
-jsonpickle = "^2.2"
+deep-translator = "^1.9"
+fpdf2 = "^2.6"
+jsonpickle = "^3.0"
 langdetect = "^1.0"
-networkx = "^2.7"
-numpy = "^1.22"
-ocrmypdf = "^13.7"
-pdfplumber = "^0.6"
-PyPDF2 = "^2.9.0"
-pyside6 = "^=6.2"
+networkx = "^3.0"
+numpy = "^1.24"
+ocrmypdf = "^14.0"
+pdfplumber = "^0.7"
+PyPDF2 = "^3.0"
+pyside6 = "^6.4"
 python-magic = "^0.4"
 sortedcontainers = "^2.4"
-selenium = "^4.3.0"
+selenium = "^4.8"
 stanza = "^1.4"
-tqdm = "^4.63"
-urlextract = "^1.6"
-webdriver-manager = "^3.8.3"
+tqdm = "^4.64"
+urlextract = "^1.8"
+webdriver-manager = "^3.8"
 Werkzeug = "^2.2"
 
 [tool.poetry.dev-dependencies]
-coverage = "^6.4"
-flake8 = "^5.0"
-pytest = "^7.0"
-tox = "^3.25"
-tox-gh-actions = "^2.9"
+coverage = "^7.1"
+flake8 = "^6.0"
+pytest = "^7.2"
+tox = "^4.4"
+tox-gh-actions = "^3.0"
 
 [tool.poetry.scripts]
 plagdef = "plagdef.app:cli"
