Make translate feature optional
Took 30 minutes

--- a/plagdef/config/app.ini
+++ b/plagdef/config/app.ini
@@ -3,6 +3,8 @@
 lang = 'de'
 ; Use OCR for PDFs with poor text layers
 ocr = False
+; Use the translation feature
+transl = False
 ; Use serialization for improved performance
 ser = True
 ; Remove stop words (yes/no)
