--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,7 +7,7 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                python: [ '3.9', '3.10' ]
+                python: [ '3.10' ]
         steps:
             -   name: Checkout repo
                 uses: actions/checkout@v3
@@ -19,9 +19,8 @@ jobs:
                 run: make
             -   name: Run tests
                 run: make test-all-ci
-            -   name: Save coverage (only Python 3.9)
+            -   name: Save coverage
                 uses: actions/upload-artifact@master
-                if: ${{ matrix.python == 3.9 }}
                 with:
                     name: coverage
                     path: coverage.xml
@@ -36,11 +35,11 @@ jobs:
             -   name: Setup Python
                 uses: actions/setup-python@v3
                 with:
-                    python-version: 3.9
+                    python-version: 3.10
             -   name: Publish to PyPI
                 uses: JRubics/poetry-publish@v1.10
                 with:
-                    python_version: 3.9
+                    python_version: 3.10
                     pypi_token: ${{ secrets.PYPI_API_TOKEN }}
 
     sonarcloud:
